# cutils

./: .gitignore  CMakeLists.txt  makefile
examples/: tsearch2_bt_demo.c  tsearch_hs_demo.c
include/: hashset.h  tsearch.h  tsearch_binarytree.h  tsearch_hs.h
src/: hashset.c  tsearch.c  tsearch_binarytree.c  tsearch_hs.c
